--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/publish/content-publish-dialog.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/publish/content-publish-dialog.less
@@ -41,6 +41,7 @@
   .include-child-check {
     position: absolute;
     bottom: 40px;
+    left: 38px;
 
     input[type="checkbox"] + label {
       color: @admin-blue !important;
